--- a/docs/g6.md
+++ b/docs/g6.md
@@ -2,7 +2,7 @@
 
 ```tsx
 import React from 'react';
-import G6 from 'base/pages/g6';
+import G6 from 'guos-components/pages/g6';
 
 export default () => {
   return <G6 />;
